Fix all broken links in index.html

--- a/index.html
+++ b/index.html
@@ -1583,9 +1583,9 @@
                             <a href="/zihin" class="nav-dropdown-item">🧠 Zihin & Davranış</a>
                         </div>
                     </li>
-                    <li><a href="/araclar" class="nav-link">Araçlar</a></li>
-                    <li><a href="/hikayeler" class="nav-link">Hikayeler</a></li>
-                    <li><a href="/bilim" class="nav-link">Bilim</a></li>
+                    <li><a href="pages/araclar.html" class="nav-link">Araçlar</a></li>
+                    <li><a href="pages/hikayeler.html" class="nav-link">Hikayeler</a></li>
+                    <li><a href="pages/bilim.html" class="nav-link">Bilim</a></li>
                     <li><a href="/hakkimizda" class="nav-link">Hakkımızda</a></li>
                 </ul>
                 <a href="pages/test.html" class="btn btn-primary">Teste Başla</a>
@@ -1777,15 +1777,15 @@
                 <a href="pages/test.html" class="btn btn-lg">Teste Başla →</a>
             </div>
             <div class="tools-grid">
-                <a href="/araclar/bmi" class="tool-card">
+                <a href="pages/araclar.html#bmi" class="tool-card">
                     <div class="tool-card-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="8" y="14" width="32" height="20" rx="3" stroke="#0D7377" stroke-width="2.5"/><path d="M14 14V20" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M20 14V22" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M26 14V20" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M32 14V22" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><circle cx="24" cy="28" r="3" stroke="#0D7377" stroke-width="1.5"/><path d="M24 25V22" stroke="#0D7377" stroke-width="1.5" stroke-linecap="round"/></svg></div>
                     <div class="tool-card-title">BMI Hesapla</div>
                 </a>
-                <a href="/araclar/kalori" class="tool-card">
+                <a href="pages/araclar.html#kalori" class="tool-card">
                     <div class="tool-card-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 6C24 6 16 16 16 26C16 32 19.6 38 24 40C28.4 38 32 32 32 26C32 16 24 6 24 6Z" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M24 22C24 22 20 28 20 32C20 34.2 21.8 36 24 36C26.2 36 28 34.2 28 32C28 28 24 22 24 22Z" stroke="#0D7377" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg></div>
                     <div class="tool-card-title">Kalori İhtiyacı</div>
                 </a>
-                <a href="/araclar/bel-boy" class="tool-card">
+                <a href="pages/araclar.html#bel-boy" class="tool-card">
                     <div class="tool-card-icon"><svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 38L10 10L38 38H10Z" stroke="#0D7377" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 18L16 18" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M10 26L14 26" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M10 34L14 34" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M18 38V34" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M26 38V34" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/><path d="M34 38V36" stroke="#0D7377" stroke-width="2" stroke-linecap="round"/></svg></div>
                     <div class="tool-card-title">Bel/Boy Oranı</div>
                 </a>
@@ -1889,7 +1889,7 @@
                 </div>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
-                <a href="/hikayeler" class="btn btn-outline btn-lg">Tüm Hikayeleri Gör →</a>
+                <a href="pages/hikayeler.html" class="btn btn-outline btn-lg">Tüm Hikayeleri Gör →</a>
             </div>
         </div>
     </section>
@@ -1910,7 +1910,7 @@
                         <li>Düzenli olarak güncellenir</li>
                         <li>Ticari çıkarlardan bağımsızdır</li>
                     </ul>
-                    <a href="/bilim" class="btn btn-outline" style="border-color: rgba(255,255,255,0.3); color: white;">
+                    <a href="pages/bilim.html" class="btn btn-outline" style="border-color: rgba(255,255,255,0.3); color: white;">
                         Bilimsel Yaklaşımımız →
                     </a>
                 </div>
@@ -1925,7 +1925,7 @@
                 <h2 class="section-title">En Çok Okunan Rehberler</h2>
             </div>
             <div class="guides-grid">
-                <a href="/rehber/glp1" class="guide-card">
+                <a href="pages/rehberler/kalori-acigi.html" class="guide-card">
                     <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1587854692152-cbe660dbde88?w=500&q=80');">
                         <div class="guide-title">GLP-1 İlaçları: Bilmeniz Gereken Her Şey</div>
                     </div>
@@ -1933,7 +1933,7 @@
                         <div class="guide-meta">⏱️ 12 dk okuma</div>
                     </div>
                 </a>
-                <a href="/rehber/aralikli-oruc" class="guide-card">
+                <a href="pages/rehberler/aralikli-oruc.html" class="guide-card">
                     <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1490645935967-10de6ba17061?w=500&q=80');">
                         <div class="guide-title">Aralıklı Oruç: Gerçekten İşe Yarıyor mu?</div>
                     </div>
@@ -1941,7 +1941,7 @@
                         <div class="guide-meta">⏱️ 8 dk okuma</div>
                     </div>
                 </a>
-                <a href="/rehber/egzersiz-kilo" class="guide-card">
+                <a href="pages/rehberler/evde-egzersiz.html" class="guide-card">
                     <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1517836357463-d25dfeac3438?w=500&q=80');">
                         <div class="guide-title">Kilo Verdiren Egzersizler: Bilim Ne Diyor</div>
                     </div>
@@ -1949,7 +1949,7 @@
                         <div class="guide-meta">⏱️ 10 dk okuma</div>
                     </div>
                 </a>
-                <a href="/rehber/uzun-yasam" class="guide-card">
+                <a href="pages/rehberler/akdeniz-diyeti.html" class="guide-card">
                     <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1447452001602-7090c7ab2db3?w=500&q=80');">
                         <div class="guide-title">Uzun Yaşamın Bilimsel Sırları</div>
                     </div>
@@ -1957,7 +1957,7 @@
                         <div class="guide-meta">⏱️ 15 dk okuma</div>
                     </div>
                 </a>
-                <a href="/rehber/duygusal-yeme" class="guide-card">
+                <a href="pages/rehberler/uyku-kalitesi.html" class="guide-card">
                     <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=500&q=80');">
                         <div class="guide-title">Duygusal Yeme: Nasıl Başa Çıkılır?</div>
                     </div>
@@ -1965,7 +1965,7 @@
                         <div class="guide-meta">⏱️ 7 dk okuma</div>
                     </div>
                 </a>
-                <a href="/rehber/supplement" class="guide-card">
+                <a href="pages/rehberler/tip2-diyabet.html" class="guide-card">
                     <div class="guide-card-image" style="background-image: url('https://images.unsplash.com/photo-1550572017-edd951aa8f72?w=500&q=80');">
                         <div class="guide-title">Supplement Rehberi: Hangileri İşe Yarıyor?</div>
                     </div>
@@ -1975,7 +1975,7 @@
                 </a>
             </div>
             <div style="text-align: center; margin-top: 2rem;">
-                <a href="/rehberler" class="btn btn-outline btn-lg">Tüm Rehberleri Gör →</a>
+                <a href="pages/rehberler.html" class="btn btn-outline btn-lg">Tüm Rehberleri Gör →</a>
             </div>
         </div>
     </section>
@@ -2100,10 +2100,10 @@
                 <div class="footer-column">
                     <h4>Araçlar</h4>
                     <ul class="footer-links">
-                        <li><a href="/araclar/bmi">BMI Hesapla</a></li>
-                        <li><a href="/araclar/kalori">Kalori Hesapla</a></li>
+                        <li><a href="pages/araclar.html#bmi">BMI Hesapla</a></li>
+                        <li><a href="pages/araclar.html#kalori">Kalori Hesapla</a></li>
                         <li><a href="pages/test.html">Tedavi Testi</a></li>
-                        <li><a href="/araclar/bel-boy">Bel/Boy Oranı</a></li>
+                        <li><a href="pages/araclar.html#bel-boy">Bel/Boy Oranı</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
