--- a/pages/rehberler/50-yas-egzersiz.html
+++ b/pages/rehberler/50-yas-egzersiz.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>50 Yaş Üstü Egzersiz Rehberi | UzunYaşa</title>
-    <meta name="description" content="Yaşa uygun, güvenli ve etkili egzersiz önerileri">
+    <meta name="description" content="Yaşa uygun, güvenli ve etkili egzersiz önerileri. Kas kaybını önleme, denge ve esneklik.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
-        :root { --primary: #195157; --accent: #E8963E; --text: #1a1a1a; --bg: #FAF9F7; --white: #FFFFFF; --border: #e5e7eb; }
+        :root { --primary: #195157; --accent: #E8963E; --text: #1a1a1a; --bg: #FAF9F7; --white: #FFFFFF; --border: #e5e7eb; --success: #10B981; --warning: #F59E0B; }
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Inter', sans-serif; color: var(--text); line-height: 1.7; background: var(--bg); }
         .header { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; background: rgba(255,255,255,0.97); backdrop-filter: blur(10px); border-bottom: 1px solid var(--border); }
@@ -22,11 +22,25 @@
         .guide-hero h1 { font-size: 2.5rem; font-weight: 800; margin-bottom: 1rem; }
         .guide-hero p { font-size: 1.15rem; opacity: 0.95; }
         .guide-content { max-width: 800px; margin: 0 auto; padding: 3rem 2rem; }
-        .coming-soon { text-align: center; padding: 4rem 2rem; }
-        .coming-soon h2 { color: var(--primary); margin-bottom: 1rem; }
-        .coming-soon p { color: #6b7280; margin-bottom: 2rem; }
+        .guide-content h2 { font-size: 1.6rem; color: var(--primary); margin: 2.5rem 0 1rem; border-bottom: 2px solid var(--border); padding-bottom: 0.5rem; }
+        .guide-content h3 { font-size: 1.2rem; margin: 1.5rem 0 0.75rem; }
+        .guide-content p { margin-bottom: 1.25rem; font-size: 1.05rem; }
+        .guide-content ul { margin: 1rem 0 1.5rem 1.5rem; }
+        .guide-content li { margin-bottom: 0.75rem; }
+        .info-box { padding: 1.5rem; border-radius: 12px; margin: 1.5rem 0; }
+        .info-box.tip { background: #ECFDF5; border-left: 4px solid var(--success); }
+        .info-box.warning { background: #FEF3C7; border-left: 4px solid var(--warning); }
+        .info-box h4 { margin-bottom: 0.5rem; }
+        .exercise-type { background: var(--white); border: 2px solid var(--border); border-radius: 16px; padding: 1.5rem; margin: 1rem 0; }
+        .exercise-type h4 { color: var(--primary); margin-bottom: 0.75rem; font-size: 1.1rem; }
+        .week-plan { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 0.75rem; margin: 1.5rem 0; }
+        .day-card { background: var(--white); border: 1px solid var(--border); border-radius: 10px; padding: 1rem; text-align: center; }
+        .day-card .day { font-weight: 700; color: var(--primary); margin-bottom: 0.25rem; }
+        .day-card .activity { font-size: 0.85rem; color: #6b7280; }
+        .guide-cta { background: linear-gradient(135deg, var(--primary), #2a6b73); padding: 3rem 2rem; border-radius: 20px; text-align: center; color: white; margin: 3rem 0; }
         .cta-btn { display: inline-block; background: var(--accent); color: white; padding: 1rem 2rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
         footer { background: var(--text); color: white; padding: 2rem; text-align: center; }
+        @media (max-width: 768px) { .guide-hero h1 { font-size: 2rem; } }
     </style>
 </head>
 <body>
@@ -36,23 +50,157 @@
             <a href="../rehberler.html" class="back-link">← Tüm Rehberler</a>
         </div>
     </header>
+
     <section class="guide-hero">
-        <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=1400" alt="50 Yaş Üstü Egzersiz Rehberi" class="guide-hero-bg">
+        <img src="https://images.unsplash.com/photo-1571019614242-c5c5dee9f50b?w=1400" alt="50+ Egzersiz" class="guide-hero-bg">
         <div class="guide-hero-overlay"></div>
         <div class="guide-hero-content">
-            <span class="guide-badge">🏃 Egzersiz</span>
+            <span class="guide-badge">💪 Egzersiz</span>
             <h1>50 Yaş Üstü Egzersiz Rehberi</h1>
-            <p>Yaşa uygun, güvenli ve etkili egzersiz önerileri</p>
+            <p>Yaşa uygun, güvenli ve etkili egzersiz önerileri. Kas kaybını önleme, denge ve esneklik için stratejiler.</p>
         </div>
     </section>
+
     <main class="guide-content">
-        <div class="coming-soon">
-            <h2>🚧 Bu rehber hazırlanıyor</h2>
-            <p>Uzman ekibimiz bu rehberin içeriğini hazırlıyor. Yakında sizlerle olacak!</p>
-            <p>Bu arada kişiselleştirilmiş sağlık önerileri almak ister misiniz?</p>
-            <a href="../test.html" class="cta-btn">Sağlık Testine Başla →</a>
+        <h2>50'den Sonra Egzersiz Neden Kritik?</h2>
+        <p>30 yaşından itibaren her 10 yılda kas kütlesinin %3-8'i kaybolur (sarkopeni). 50'den sonra bu hız artar. Ama iyi haber: <strong>Egzersiz bu süreci yavaşlatır, hatta tersine çevirir!</strong></p>
+
+        <div class="info-box tip">
+            <h4>💡 Düzenli Egzersizin 50+ Faydaları</h4>
+            <ul>
+                <li>Kas ve kemik yoğunluğunu korur</li>
+                <li>Düşme riskini %30-40 azaltır</li>
+                <li>Bilişsel fonksiyonları korur</li>
+                <li>Depresyon riskini azaltır</li>
+                <li>Kronik hastalık yönetimini kolaylaştırır</li>
+                <li>Bağımsız yaşam süresini uzatır</li>
+            </ul>
+        </div>
+
+        <h2>4 Temel Egzersiz Türü</h2>
+
+        <div class="exercise-type">
+            <h4>1. 🏃 Aerobik (Kardio)</h4>
+            <p>Kalp ve akciğer sağlığı için. Haftada 150 dk orta yoğunluk veya 75 dk yüksek yoğunluk.</p>
+            <ul>
+                <li>Tempolu yürüyüş (en güvenli)</li>
+                <li>Yüzme (eklemlere nazik)</li>
+                <li>Bisiklet</li>
+                <li>Dans</li>
+                <li>Su aerobiği</li>
+            </ul>
+        </div>
+
+        <div class="exercise-type">
+            <h4>2. 💪 Direnç (Güç) Egzersizi</h4>
+            <p>Kas kaybını önlemek için ŞART. Haftada 2-3 gün, tüm büyük kas grupları.</p>
+            <ul>
+                <li>Vücut ağırlığı: Squat, lunge, şınav (modifiye)</li>
+                <li>Direnç bandları</li>
+                <li>Hafif dumbell</li>
+                <li>Makine ağırlıkları</li>
+            </ul>
+            <p><em>Başlangıç: Her hareket 8-12 tekrar, 2 set</em></p>
+        </div>
+
+        <div class="exercise-type">
+            <h4>3. ⚖️ Denge Egzersizleri</h4>
+            <p>Düşme önleme için kritik. Her gün veya gün aşırı.</p>
+            <ul>
+                <li>Tek ayak üzerinde durma (tezgaha tutunarak)</li>
+                <li>Topuk-burun yürüyüşü</li>
+                <li>Tai Chi</li>
+                <li>Yoga (sandalye destekli olabilir)</li>
+            </ul>
+        </div>
+
+        <div class="exercise-type">
+            <h4>4. 🧘 Esneklik (Germe)</h4>
+            <p>Eklem sağlığı ve hareket açıklığı için. Her antrenman sonrası + haftada 2-3 ayrı seans.</p>
+            <ul>
+                <li>Statik germeler (30 saniye tutma)</li>
+                <li>Yoga</li>
+                <li>Pilates</li>
+                <li>Sabah germe rutini</li>
+            </ul>
+        </div>
+
+        <h2>Örnek Haftalık Program</h2>
+        
+        <div class="week-plan">
+            <div class="day-card">
+                <div class="day">Pazartesi</div>
+                <div class="activity">Yürüyüş 30dk + Üst vücut güç</div>
+            </div>
+            <div class="day-card">
+                <div class="day">Salı</div>
+                <div class="activity">Denge + Esneklik (Yoga 30dk)</div>
+            </div>
+            <div class="day-card">
+                <div class="day">Çarşamba</div>
+                <div class="activity">Yürüyüş 30dk + Alt vücut güç</div>
+            </div>
+            <div class="day-card">
+                <div class="day">Perşembe</div>
+                <div class="activity">Dinlenme veya hafif germe</div>
+            </div>
+            <div class="day-card">
+                <div class="day">Cuma</div>
+                <div class="activity">Yüzme veya bisiklet 30dk</div>
+            </div>
+            <div class="day-card">
+                <div class="day">Cumartesi</div>
+                <div class="activity">Tüm vücut güç + Denge</div>
+            </div>
+            <div class="day-card">
+                <div class="day">Pazar</div>
+                <div class="activity">Hafif yürüyüş veya dinlenme</div>
+            </div>
+        </div>
+
+        <h2>Güvenlik Kuralları</h2>
+
+        <div class="info-box warning">
+            <h4>⚠️ Başlamadan Önce</h4>
+            <ul>
+                <li>Kronik hastalığınız varsa doktorunuza danışın</li>
+                <li>Yavaş başlayın, kademeli artırın</li>
+                <li>Ağrı hissederseniz durun</li>
+                <li>Bol su için</li>
+                <li>Uygun ayakkabı ve kıyafet giyin</li>
+            </ul>
+        </div>
+
+        <h3>Kaçınılması Gerekenler</h3>
+        <ul>
+            <li>❌ Ani, patlayıcı hareketler</li>
+            <li>❌ Çok ağır yükler (ego lifting)</li>
+            <li>❌ Isınmadan yoğun egzersiz</li>
+            <li>❌ Aşırı sıcak/soğukta açık havada</li>
+            <li>❌ Hasta veya ateşliyken egzersiz</li>
+        </ul>
+
+        <h2>Motivasyon İpuçları</h2>
+        <ul>
+            <li>Bir arkadaş veya grup bulun</li>
+            <li>Rutini aynı saate bağlayın</li>
+            <li>Küçük hedefler koyun ve kutlayın</li>
+            <li>Müzik veya podcast dinleyin</li>
+            <li>İlerlemenizi takip edin (adım sayar, günlük)</li>
+        </ul>
+
+        <div class="info-box tip">
+            <h4>✅ Hatırlatma</h4>
+            <p>"En iyi egzersiz, yaptığınız egzersizdir." Mükemmel program aramak yerine, tutarlı olmaya odaklanın. Günde 10 dakika bile faydalıdır!</p>
+        </div>
+
+        <div class="guide-cta">
+            <h3>Size özel egzersiz planı mı istiyorsunuz?</h3>
+            <p>Sağlık durumunuza ve hedeflerinize uygun program oluşturalım.</p>
+            <a href="../test.html" class="cta-btn">Teste Başla →</a>
         </div>
     </main>
+
     <footer><p>© 2025 UzunYaşa. Tüm hakları saklıdır.</p></footer>
 </body>
 </html>
