Fix blog featured image display

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -172,10 +172,10 @@
 
         .featured-image {
             height: 400px;
-            background: linear-gradient(135deg, var(--accent-orange), #F4A855);
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            border-radius: 16px;
+            overflow: hidden;
+            background-size: cover;
+            background-position: center;
         }
 
         .featured-image img {
