--- a/pages/rehberler.html
+++ b/pages/rehberler.html
@@ -273,6 +273,11 @@
             color: inherit;
             display: flex;
             flex-direction: column;
+            cursor: pointer;
+        }
+        
+        .guide-card * {
+            pointer-events: none;
         }
 
         .guide-card:hover {
@@ -297,6 +302,7 @@
             position: absolute;
             top: 0; left: 0; right: 0; bottom: 0;
             background: linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.1) 60%, rgba(0,0,0,0.2) 100%);
+            pointer-events: none;
         }
 
         .guide-thumbnail svg {
