Simplify treatment comparison - remove pros/cons, keep objective descriptions

--- a/index.html
+++ b/index.html
@@ -1885,13 +1885,7 @@
                             <div class="compare-preview-title">GLP-1 İlaçları (Ozempic, Wegovy)</div>
                             <div class="compare-preview-meta">%15-20 kilo kaybı • Haftalık enjeksiyon</div>
                             <div class="compare-preview-details">
-                                <p>Semaglutid ve tirzepatid gibi GLP-1 agonistleri, iştahı azaltarak ve mide boşalmasını yavaşlatarak kilo kaybı sağlar.</p>
-                                <ul>
-                                    <li class="pros">✓ Diyabet kontrolünü de iyileştirir</li>
-                                    <li class="pros">✓ Ameliyatsız, haftalık enjeksiyon</li>
-                                    <li class="cons">✗ Sürekli kullanım gerektirir (bırakınca geri alım)</li>
-                                    <li class="cons">✗ Aylık maliyet: 4.000-8.000₺</li>
-                                </ul>
+                                <p>Semaglutid ve tirzepatid gibi GLP-1 agonistleri, iştahı azaltarak ve mide boşalmasını yavaşlatarak kilo kaybı sağlar. Haftalık enjeksiyon şeklinde uygulanır. Diyabet kontrolünü de iyileştirir.</p>
                             </div>
                         </div>
                     </div>
@@ -1901,13 +1895,7 @@
                             <div class="compare-preview-title">Endoskopik Tüp Mide (ESG)</div>
                             <div class="compare-preview-meta">%15-20 kilo kaybı • Tek seferlik prosedür</div>
                             <div class="compare-preview-details">
-                                <p>Mide hacmi endoskopik olarak dikişlerle küçültülür. Kesi yok, genel anestezi altında 60-90 dakika sürer.</p>
-                                <ul>
-                                    <li class="pros">✓ Ameliyat değil, aynı gün taburcu</li>
-                                    <li class="pros">✓ Geri dönüşümlü (gerekirse)</li>
-                                    <li class="pros">✓ Cerrahiye göre düşük komplikasyon</li>
-                                    <li class="cons">✗ Tek seferlik maliyet: 80.000-150.000₺</li>
-                                </ul>
+                                <p>Mide hacmi endoskopik olarak dikişlerle küçültülür. Kesi yok, genel anestezi altında 60-90 dakika sürer. Aynı gün taburcu olunur, geri dönüşümlü bir prosedürdür.</p>
                             </div>
                         </div>
                     </div>
@@ -1917,14 +1905,27 @@
                             <div class="compare-preview-title">Bariatrik Cerrahi (Sleeve, Bypass)</div>
                             <div class="compare-preview-meta">%25-35 kilo kaybı • Kalıcı anatomik değişiklik</div>
                             <div class="compare-preview-details">
-                                <p>Tüp mide (sleeve) veya mide bypass ameliyatları kalıcı kilo kaybı sağlar. BMI >35 için önerilir.</p>
-                                <ul>
-                                    <li class="pros">✓ En yüksek ve kalıcı kilo kaybı</li>
-                                    <li class="pros">✓ Diyabet remisyonu %80+</li>
-                                    <li class="cons">✗ Cerrahi riskler, 2-3 gün hastane</li>
-                                    <li class="cons">✗ Geri dönüşü yok</li>
-                                    <li class="cons">✗ Ömür boyu vitamin takibi</li>
-                                </ul>
+                                <p>Tüp mide (sleeve) veya mide bypass ameliyatları kalıcı kilo kaybı sağlar. BMI >35 için önerilir. En yüksek kilo kaybı oranına sahip yöntemdir, diyabet remisyonu %80+ oranındadır.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="compare-preview-item" onclick="this.classList.toggle('expanded')">
+                        <span class="compare-preview-icon">🥗</span>
+                        <div class="compare-preview-text">
+                            <div class="compare-preview-title">Diyet ve Yaşam Tarzı</div>
+                            <div class="compare-preview-meta">%5-10 kilo kaybı • Sürdürülebilir alışkanlıklar</div>
+                            <div class="compare-preview-details">
+                                <p>Kalori açığı, dengeli beslenme ve düzenli egzersiz ile sağlıklı kilo kaybı sağlanır. Tüm tedavi yöntemlerinin temelini oluşturur ve uzun vadeli başarı için gereklidir.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="compare-preview-item" onclick="this.classList.toggle('expanded')">
+                        <span class="compare-preview-icon">🏃</span>
+                        <div class="compare-preview-text">
+                            <div class="compare-preview-title">Egzersiz Programları</div>
+                            <div class="compare-preview-meta">%3-5 kilo kaybı • Kas ve metabolizma desteği</div>
+                            <div class="compare-preview-details">
+                                <p>Düzenli fiziksel aktivite kas kütlesini korur, metabolizmayı hızlandırır ve genel sağlığı iyileştirir. Diğer tedavi yöntemleriyle birlikte uygulandığında sonuçları önemli ölçüde artırır.</p>
                             </div>
                         </div>
                     </div>
